refactor: Refactor album queries
